Allow multiple pain descriptions
